--- a/css/styles.css
+++ b/css/styles.css
@@ -3,6 +3,8 @@
   --background-color: #ffffff;
   --primery-text-color: #757575;
   --title-text-color: #212121;
+  --hover-focus-btn: #188ce8;
+  --perfuse-color: #f5f4fa;
 }
 .list {
   list-style: none;
@@ -13,6 +15,9 @@
 body {
   font-family: 'Roboto', sans-serif;
   color: var(--primery-text-color);
+  background-color: var(--background-color);
+  font-size: 14px;
+  letter-spacing: 0.03em;
 }
 /* <======================COMPONENTS==========================> */
 .logo {
@@ -20,21 +25,26 @@ body {
   font-weight: 700;
   font-size: 26px;
   line-height: 1.38;
-  letter-spacing: 0.03em;
 
   color: #000000;
+}
+.logo-footer {
+  font-family: 'Raleway', sans-serif;
+  font-weight: 700;
+  font-size: 26px;
+  line-height: 1.38;
+
+  color: var(--background-color);
 }
 .acsent-logo {
   font-family: 'Raleway', sans-serif;
   font-weight: 700;
   font-size: 26px;
   line-height: 1.38;
-  letter-spacing: 0.03em;
   color: var(--accent-color);
 }
 .menu-item {
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 
@@ -44,9 +54,11 @@ body {
 .menu-item:focus {
   color: var(--accent-color);
 }
+.current {
+  color: var(--accent-color);
+}
 .contact-mail {
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 
@@ -58,7 +70,6 @@ body {
 }
 .contact-phone {
   font-weight: 500;
-  font-size: 14px;
   line-height: 1.14;
   letter-spacing: 0.02em;
 
@@ -72,11 +83,16 @@ body {
 /* <======================HEADER==========================> */
 .portfolio-btn {
   color: var(--title-text-color);
-  background-color: #f5f4fa;
   cursor: pointer;
+  font-family: 'Roboto';
+  font-weight: 500;
+  font-size: 16px;
+  line-height: 1.62;
+  text-align: center;
 }
 .portfolio-btn:hover,
 .portfolio-btn:focus {
+  color: var(--background-color);
   background-color: var(--accent-color);
 }
 .caption-text {
@@ -92,7 +108,6 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 1.87;
-  letter-spacing: 0.03em;
 }
 /* <======================/HEADER==========================>  */
 /* <======================HERO==========================> */
@@ -110,6 +125,7 @@ body {
   color: var(--background-color);
 }
 .hero-btn {
+  font-family: inherit;
   font-weight: 700;
   font-size: 16px;
   line-height: 1.87;
@@ -126,25 +142,33 @@ display: block; */
 }
 .hero-btn:hover,
 .hero-btn:focus {
-  background-color: #188ce8;
+  background-color: var(--hover-focus-btn);
 }
+.visually-hidden {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
 
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+}
 /* <======================/HERO==========================> */
 /* <======================Benefits==========================> */
 .topic {
   font-weight: 700;
-  font-size: 14px;
   line-height: 1.14;
-  letter-spacing: 0.03em;
   text-transform: uppercase;
 
   color: var(--title-text-color);
 }
 .rubric {
   font-weight: 400;
-  font-size: 14px;
   line-height: 1.71;
-  letter-spacing: 0.03em;
 }
 /* .doing{
     display: flex;
@@ -162,18 +186,19 @@ display: block; */
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
-  letter-spacing: 0.03em;
 
   color: var(--title-text-color);
 }
 /* <======================/STUDIES==========================> */
 /* <======================TEAMS==========================> */
+.perfuse {
+  background-color: var(--perfuse-color);
+}
 .team {
   font-weight: 700;
   font-size: 36px;
   line-height: 1.16;
   text-align: center;
-  letter-spacing: 0.03em;
 
   color: var(--title-text-color);
 }
@@ -181,23 +206,19 @@ display: block; */
   font-weight: 500;
   font-size: 16px;
   line-height: 1.18;
-  letter-spacing: 0.03em;
 
   color: var(--title-text-color);
 }
 .team-prof {
   font-size: 16px;
   line-height: 1.18;
-  letter-spacing: 0.03em;
 }
 /* <=======================/TEAM=========================> */
 /* <======================FOOTER==========================> */
 .maps {
   font-style: normal;
   font-weight: 400;
-  font-size: 14px;
   line-height: 1.71;
-  letter-spacing: 0.03em;
 
   color: var(--background-color);
 }
@@ -207,5 +228,8 @@ display: block; */
 }
 .foot {
   background: #2f303a;
+}
+.adress-style {
+  font-style: normal;
 }
 /* <======================/FOOTER==========================> */
