--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,7 @@
   --title-text-color: #212121;
   --hover-focus-btn: #188ce8;
   --perfuse-color: #f5f4fa;
+  --head-logo: #000000;
 }
 .list {
   list-style: none;
@@ -26,7 +27,7 @@ body {
   font-size: 26px;
   line-height: 1.38;
 
-  color: #000000;
+  color: var(--head-logo);
 }
 .logo-footer {
   font-family: 'Raleway', sans-serif;
@@ -83,6 +84,8 @@ body {
 /* <======================HEADER==========================> */
 .portfolio-btn {
   color: var(--title-text-color);
+  background-color: var(--background-color);
+  letter-spacing: 0.03;
   cursor: pointer;
   font-family: 'Roboto';
   font-weight: 500;
@@ -108,6 +111,7 @@ body {
   font-family: 'Roboto', sans-serif;
   font-size: 16px;
   line-height: 1.87;
+  color: var(--primery-text-color);
 }
 /* <======================/HEADER==========================>  */
 /* <======================HERO==========================> */
@@ -160,6 +164,7 @@ display: block; */
 /* <======================/HERO==========================> */
 /* <======================Benefits==========================> */
 .topic {
+  font-size: 14px;
   font-weight: 700;
   line-height: 1.14;
   text-transform: uppercase;
